[metadata]
name = auth_headers
version = 0.0.1
description = A small useful Python module to abstract away the common auth header methods used by different software vendors. The output is a requests session with the authentication headers built in.
author = Josh XT
author_email = josh@devxt.com

[options]
package_dir=
    =src
packages=find:
